Updated css & docs. Added redirects when signing in

--- a/src/app/auth/login-register/login-register.component.html
+++ b/src/app/auth/login-register/login-register.component.html
@@ -7,7 +7,7 @@
         <div class="col-xs-12 col-sm-6 index-input index-input-left">
           <div class="form-panel register">
             <div class="form-header">
-              <h1 style="margin-top: 3px;"><mat-icon style="vertical-align: text-top; padding-top: 2px;">perm_identity</mat-icon>Register</h1>
+              <h1 style="margin-top: 3px;"><mat-icon style="vertical-align: text-top; padding-top: 2px;">perm_identity</mat-icon>&nbsp;Register</h1>
               <h5>Start collecting and sharing enemy intelligence</h5>
             </div>
             <div class="form-content">
