--- a/src/app/auth/profile/components/indexes/indexes.component.html
+++ b/src/app/auth/profile/components/indexes/indexes.component.html
@@ -72,7 +72,7 @@
 									<!--<th scope="col">Key (old)</th>-->
 									<th mat-sort-header="world" scope="col" class="hidden-xs hidden-sm hidden-md">World</th>
 									<th mat-sort-header="reports" scope="col" class="hidden-xs hidden-sm hidden-md">Total reports</th>
-									<th scope="col" class="hidden-xs hidden-sm">Team Owners</th>
+									<th scope="col" class="hidden-xs hidden-sm">Contributors</th>
 									<th style="text-align: center !important;" scope="col" class="hidden-xs hidden-sm">
 										Contribute <mat-icon class="mat-icon-title-inline a-link" matTooltip="If you enable this toggle, your collected intell will be shared with this team. If you disable this option, you can still read the intel collected by the other team members but your own collected intel will not be shared with the other players in this team.">help_outline</mat-icon>
 									</th>
