--- a/src/app/auth/profile/components/userscript/userscript.component.html
+++ b/src/app/auth/profile/components/userscript/userscript.component.html
@@ -4,10 +4,9 @@
 			<div class="col-xs-12">
 
 				<h2 style="margin-top: 0;">
-          <mat-icon style="font-size: 40px; vertical-align: top; margin-right: 25px; color: #18bc9c;">description</mat-icon>
-          Install the city indexer <span class="gd-primary">userscript</span>
+          📜 Install the <span class="gd-primary">userscript</span>
         </h2>
-				<h4>The GrepoData userscript allows you to collect enemy intelligence while playing Grepolis in your browser.</h4>
+				<h4>The GrepoData userscript is required to use the in-game City Indexer features.</h4>
 				<br/>
 
 				<div class="alert alert-gd-1">
@@ -52,13 +51,13 @@
 
 				<div class="alert alert-gd-1">
 					<div class="container-fluid">
-						<div class="row">
+						<div class="row function-row">
 							<div class="col-xs-12 col-sm-12 col-lg-6">
 								<div style="padding-top: 15px;" class="hidden-xs hidden-sm"></div>
 								<h3><strong>Step 2:</strong> Install the userscript</h3>
-                <h5 class="gd-secondary">You only need to install this script once (multiple script installs are no longer required).</h5>
+                <h5 class="gd-secondary">Click the install button to the right and add the script to Tampermonkey (opens in new tab).</h5>
 							</div>
-							<div class="col-xs-12 col-sm-12 col-lg-6" style="padding-top: 5px;">
+							<div class="col-xs-12 col-sm-12 col-lg-6" style="padding-top: 5px; margin: auto;">
 								<a tabindex="-1" mat-button class="mat-raised-button bg-gd-2 hover-scale"
 								   style="font-size: 20px; padding: 8px; width: 100%; color: white; overflow: hidden; text-overflow: ellipsis;"
 								   href="https://api.grepodata.com/script/indexer.user.js" target="_blank">
@@ -75,7 +74,7 @@
 
 				<div class="alert alert-gd-1">
 					<div class="container-fluid">
-						<div class="row">
+						<div class="row function-row">
 							<div class="col-xs-12 col-sm-12 col-lg-6">
 								<h3><strong>Step 3:</strong> Link the script to your account</h3>
 								<ul class="userscript-list">
@@ -116,25 +115,22 @@
 		<div class="row">
 			<div class="col-xs-12">
 
-        <h2 style="margin-top: 0;">Userscript <span class="gd-primary">functionality</span> overview</h2>
-				<h4>Once you have installed the userscript, you can collect new intelligence by indexing reports from your inbox or alliance forum.
-        While in-game, you will also be able to browse the collected intel for each town.
-        </h4>
+        <h2 style="margin-top: 0;">⭐ Userscript <span class="gd-primary">features</span></h2>
 				<br/>
 
 				<div class="alert alert-gd-1">
 					<div class="container-fluid">
-						<div class="row">
+						<div class="row function-row">
 							<div class="col-xs-12 col-sm-12 col-lg-6">
-								<h3>1. Indexing new reports</h3>
+								<h3>Indexing Reports</h3>
 								<h5>
 									Use the <strong>'Index +' button</strong> as shown on the right to upload the report to your GrepoData account.
 									<br/>The index button will be added to reports in your inbox and on reports posted on your alliance forum.
-									<br/>You can join a GrepoData team to share the collected intel with your allies.
+									<br/>When you join a GrepoData team, your indexed reports will be shared with your teammates.
 								</h5>
 							</div>
 							<div class="col-xs-12 col-sm-12 col-lg-6 userscript-img-container">
-								<img class="lib-img" style="max-width: 100%; display: block;" src="../../../../../assets/images/index.png" alt="Collecting enemy town intelligence">
+								<img class="lib-img align-middle" style="max-width: 100%; display: block;" src="../../../../../assets/images/index.png" alt="Collecting enemy town intelligence">
 							</div>
 						</div>
 					</div>
@@ -142,17 +138,51 @@
 
 				<div class="alert alert-gd-1">
 					<div class="container-fluid">
-						<div class="row">
+						<div class="row function-row">
 							<div class="col-xs-12 col-sm-12 col-lg-6">
-								<h3>2. Browsing collected intel</h3>
+								<h3>Sharing Commands</h3>
 								<h5>
-									Use the <strong>'Intel' button</strong> in the town context menu to open the town intelligence window.
-									<br/><br/>In this window you will be able to see the collected intel for a specific town as shown on the right.
-									<br/>You will also be able to view an overview of player and alliance intel on grepodata.com
+									Use the <strong>'Share with team' button</strong> on your command overiew to share the commands with your GrepoData team.
+									Your teammates will be able to see your shared commands in a real-time combined command overview.
 								</h5>
 							</div>
 							<div class="col-xs-12 col-sm-12 col-lg-6 userscript-img-container">
+								<img class="lib-img" style="max-width: 100%; display: block;" src="../../../../../assets/images/share_commands.jpg" alt="Sharing commands">
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="alert alert-gd-1">
+					<div class="container-fluid">
+						<div class="row function-row">
+							<div class="col-xs-12 col-sm-12 col-lg-6">
+								<h3>Browsing City Intelligence</h3>
+								<h5>
+									Use the <strong>'Intel' button</strong> in the town context menu to open the town intelligence window.
+									In this window you will be able to see the collected intel for a specific town as shown on the right.
+									<br/><br/>You will also be able to view an overview of player and alliance intel on grepodata.com
+								</h5>
+                <img class="lib-img" style="max-width: 80%; display: block;" src="../../../../../assets/images/indexer_overview.png" alt="Sharing commands">
+							</div>
+							<div class="col-xs-12 col-sm-12 col-lg-6 userscript-img-container">
 								<img class="lib-img" style="max-width: 100%; display: block;" src="../../../../../assets/images/indexer_town_sm.png" alt="Browsing enemy town intelligence">
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="alert alert-gd-1">
+					<div class="container-fluid">
+						<div class="row function-row">
+							<div class="col-xs-12 col-sm-12 col-lg-6">
+								<h3>Forum Reactions</h3>
+								<h5>
+                  If you have the userscript installed, you can leave reactions to posts on the in-game alliance forum. Your alliance members can see your reaction and you can see theirs, but only if they also use the userscript and are part of the same GrepoData team. You can disable this feature in the settings.
+								</h5>
+							</div>
+							<div class="col-xs-12 col-sm-12 col-lg-6 userscript-img-container">
+								<img class="lib-img" style="max-width: 100%; display: block;" src="../../../../../assets/images/forum_reactions.png" alt="Userscript Forum Reactions">
 							</div>
 						</div>
 					</div>
