--- a/src/app/auth/profile/components/userscript/userscript.component.scss
+++ b/src/app/auth/profile/components/userscript/userscript.component.scss
@@ -1,5 +1,9 @@
 .userscript-img-container {
   text-align: center;
+  margin: auto;
+}
+.function-row {
+  display: flex;
 }
 .userscript-img {
   width: 80%;
