--- a/src/app/discord/discord.component.html
+++ b/src/app/discord/discord.component.html
@@ -31,9 +31,9 @@
 <!--                    </p>-->
 <!--                  </app-alert>-->
 
-                    <app-alert [type]="'warning'" [title]="'Slash commands'" [dismissible]="false">
-                      <h5>As of <strong>August 31 2022</strong>, the GrepoData discord bot will only respond to slash commands due to a <a href="https://support-dev.discord.com/hc/en-us/articles/4404772028055-Message-Content-Privileged-Intent-for-Verified-Bots" target="_blank">change in Discord's policy</a>. The old commands using the '!gd' prefix will no longer trigger a response because the bot will not see those messages. Please use these slash commands if you want to keep using the bot.</h5>
-                    </app-alert>
+<!--                    <app-alert [type]="'warning'" [title]="'Slash commands'" [dismissible]="false">-->
+<!--                      <h5>As of <strong>August 31 2022</strong>, the GrepoData discord bot will only respond to slash commands due to a <a href="https://support-dev.discord.com/hc/en-us/articles/4404772028055-Message-Content-Privileged-Intent-for-Verified-Bots" target="_blank">change in Discord's policy</a>. The old commands using the '!gd' prefix will no longer trigger a response because the bot will not see those messages. Please use these slash commands if you want to keep using the bot.</h5>-->
+<!--                    </app-alert>-->
 
                     <hr>
 
