--- a/src/app/indexer/overview/overview.component.html
+++ b/src/app/indexer/overview/overview.component.html
@@ -347,7 +347,7 @@
 									</tr>
 									<tr *ngIf="data.total_reports > 0">
 										<th>
-											Team owner<span *ngIf="data.owners && data.owners.length > 1">s</span>
+											Contributor<span *ngIf="data.owners && data.owners.length > 1">s</span>
 										</th>
 										<td>
 											<div style="float: right;" *ngIf="is_admin">
