--- a/src/app/auth/profile/profile.component.html
+++ b/src/app/auth/profile/profile.component.html
@@ -76,7 +76,7 @@
       <span *ngIf="active_tab === 'changelog'"><app-changelog></app-changelog></span>
       <span *ngIf="active_tab === 'faq'">
         <mat-card class="index-card">
-          <h2><mat-icon>help_outline</mat-icon>&nbsp;Frequently asked questions</h2>
+          <h2>📋 Frequently asked questions</h2>
           <h4>Can't find what you are looking for? Feel free to <a class="a-link-dialog" (click)="showContactDialog()">send us a message</a> and we will responds as soon as possible.</h4>
           <br/>
           <app-faq></app-faq>
