Added links to GrepoData Discord server

--- a/src/app/auth/profile/profile.component.html
+++ b/src/app/auth/profile/profile.component.html
@@ -78,6 +78,9 @@
         <mat-card class="index-card">
           <h2>📋 Frequently asked questions</h2>
           <h4>Can't find what you are looking for? Feel free to <a class="a-link-dialog" (click)="showContactDialog()">send us a message</a> and we will responds as soon as possible.</h4>
+
+          <app-server-alert></app-server-alert>
+
           <br/>
           <app-faq></app-faq>
         </mat-card>
