--- a/src/app/indexer/landing-page/landing-page.component.html
+++ b/src/app/indexer/landing-page/landing-page.component.html
@@ -117,6 +117,8 @@
 									<h2>📋 Frequently asked questions</h2>
 								</mat-card-title>
 								<mat-card-content class="decorated-card-content" style="border: 1px solid #138F77;">
+                  <br/>
+                  <app-server-alert></app-server-alert>
 									<br/>
 									<app-faq></app-faq>
 								</mat-card-content>
