--- a/src/app/auth/profile/components/bug-report/bug-report.component.html
+++ b/src/app/auth/profile/components/bug-report/bug-report.component.html
@@ -6,6 +6,8 @@
         <hr/>
         <h5>Please let us know what bug or issue you encountered.</h5>
 
+        <app-server-alert></app-server-alert>
+
         <app-alert type="success" title="Bug report received" *ngIf="submitted" [dismissible]="false">
           <h5>Thanks!</h5>
         </app-alert>
