--- a/src/app/discord/discord.component.html
+++ b/src/app/discord/discord.component.html
@@ -37,6 +37,9 @@
 
                     <hr>
 
+                    <app-server-alert></app-server-alert>
+                    <br/>
+
                     <h3>Configuration</h3>
                     <div class="row">
                       <div class="col-xs-5 vcenter"><pre>/help</pre></div>
