--- a/src/app/discord/server-alert/server-alert.component.html
+++ b/src/app/discord/server-alert/server-alert.component.html
@@ -1,7 +1,7 @@
 <app-alert type="info2" title="" [dismissible]="false" [iconOverride]="'discord'">
   <div>
     <h5>
-      Need help or support? Join our Discord server! <a href="https://discord.gg/d4Asapca" target="_blank">https://discord.gg/d4Asapca</a>
+      Need help or support? Join our Discord server! <a href="https://discord.gg/E95bhqR3Ns" target="_blank">https://discord.gg/E95bhqR3Ns</a>
     </h5>
   </div>
 </app-alert>
