feat(deps): angular 15 - done ✅

--- a/src/assets/styles/variable.scss
+++ b/src/assets/styles/variable.scss
@@ -1,7 +1,7 @@
 $bodyfont: 'Roboto', sans-serif;
 $headingfont: 'Roboto', sans-serif;
 
-@import '~@angular/material/theming';
+@import '@angular/material/theming';
 
 $mat-grepodata: (
   50 : #e3f7f3,
