--- a/src/gd-theme.scss
+++ b/src/gd-theme.scss
@@ -1,4 +1,4 @@
-@import '~@angular/material/theming';
+@import '@angular/material/theming';
 // Plus imports for other components in your app.
 
 // Define a custom typography config that overrides the font-family as well as the
