--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,9 @@
 @import '~@angular/material/prebuilt-themes/purple-green.css';
 
 /** Import core style */
-@import '~@ngx-share/button/themes/default/default-theme';
-@import "~@ngx-share/button/themes/material/material-light-theme";
-@import "~@ngx-share/button/themes/material/material-dark-theme";
+@import '@ngx-share/button/themes/default/default-theme';
+@import "@ngx-share/button/themes/material/material-light-theme";
+@import "@ngx-share/button/themes/material/material-dark-theme";
 //@import "~ngx-sharebuttons/styles/themes/default/default-theme";
 
 html {
