--- a/src/app/auth/profile/components/intel/intel.component.html
+++ b/src/app/auth/profile/components/intel/intel.component.html
@@ -130,7 +130,7 @@
 						<div class="cell"></div>
 					</div>
 
-					<div class='row_custom' *ngFor="let town of intel" style="height: 40px;">
+					<div class='row_custom' *ngFor="let town of intel" style="height: 60px;">
 						<div class="cell">
 							<div class="bg-flag flag-inline-middle flag-{{town?.world.substring(0, 2)}}"></div>&nbsp;<a routerLink="/points/{{town?.world}}">{{town?.world}}</a>
 						</div>
@@ -166,7 +166,7 @@
 							<div style="display: flex;" *ngIf="town?.parsed == true">
                 <span style="transform: scale(.8); margin-right: 32px;" *ngFor="let unit of town.units | ValuesPipe; let i = index;"
                       matTooltip="{{unit.name.replace('_',' ')}}">
-                  <div class="unit_icon40x40 {{unit.name}}"></div>
+                  <div class="unit-{{unit.name}} s50x50"></div>
                   <div class="unit-val" style="margin-right: -40px; top: 0px; background: #9898986e; height: 40px; width: 40px;">
                     <div>{{unit.count}}</div>
                     <div style="color: #d00; margin-top: -6px;" *ngIf="unit.killed && unit.killed!=0">-{{unit.killed}}</div>
