--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -1,3 +1,38 @@
+@use './units.scss' as unit-util;
+
+@each $name, $unit in unit-util.$units {
+  .unit-#{$name} {
+      @include unit-util.unit($unit);
+      background-size: contain;
+
+      &.s32x32 {
+        width: 32px;
+        height: 32px;
+      }
+
+      &.s48x48 {
+        width: 48px;
+        height: 48px;
+      }
+
+      &.s50x50 {
+        width: 50px;
+        height: 50px;
+      }
+
+      &.s64x64 {
+        width: 64px;
+        height: 64px;
+      }
+
+      &.s90x90 {
+        width: 90px;
+        height: 90px;
+      }
+  }
+}
+
+
 /*******************
 Global Styles
 *******************/
