--- a/src/app/auth/profile/components/intel/intel.component.html
+++ b/src/app/auth/profile/components/intel/intel.component.html
@@ -163,14 +163,9 @@
 							<div *ngIf="town?.parsed_err != true && town?.parsed != true">
 								<span class="gd-error">This report is invalid. Reason: {{town?.parsed_msg}}.</span>
 							</div>
-							<div style="display: flex;" *ngIf="town?.parsed == true">
-                <span style="transform: scale(.8); margin-right: 32px;" *ngFor="let unit of town.units | ValuesPipe; let i = index;"
-                      matTooltip="{{unit.name.replace('_',' ')}}">
-                  <div class="unit-{{unit.name}} s50x50"></div>
-                  <div class="unit-val" style="margin-right: -40px; top: 0px; background: #9898986e; height: 40px; width: 40px;">
-                    <div>{{unit.count}}</div>
-                    <div style="color: #d00; margin-top: -6px;" *ngIf="unit.killed && unit.killed!=0">-{{unit.killed}}</div>
-                  </div>
+							<div style="display: flex; gap: 4px;" *ngIf="town?.parsed == true">
+                <span *ngFor="let unit of town.units | ValuesPipe; let i = index;">
+				  <unit [id]="unit.name" [size]="50" [totalCount]="unit.count" [wounded]="unit.killed"></unit>
                 </span>
 							</div>
 						</div>
